# scotty-in-action

./: .gitignore  README.md  scotty-in-action.cabal
src/: Domain.hs  Handlers.hs  Main.hs  Routes.hs
src/Scotty/: Responses.hs
