name:           scotty-in-action
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         xdcrafts
license:        Apache-2
license-file:   LICENSE
synopsis:       Trying Web.Scotty in some simple real app.

executable scotty-in-action
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4,
                   scotty >=0.8.0 && <0.9,
                   wai >=3.0.0.2 && <3.1,
                   wai-extra >=3.0.0 && <3.1,
                   text >=0.11.3 && <0.12,
                   http-types >=0.8.5 && <0.9,
                   random >=1.0.1 && <1.1,
                   monads-tf >=0.1.0 && <0.2,
                   aeson >=0.7.0 && <0.8,
                   bytestring >=0.10.0 && <0.11
  ghc-options:     -Wall
  other-modules:   
                   Routes,
                   Scotty.Responses,
                   Domain,
                   Handlers

